; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_sdio.c_mwifiex_sdio_disable_host_int.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_sdio.c_mwifiex_sdio_disable_host_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mwifiex_adapter = type { %struct.sdio_mmc_card* }
%struct.sdio_mmc_card = type { %struct.TYPE_2__*, %struct.sdio_func* }
%struct.TYPE_2__ = type { i32 }
%struct.sdio_func = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mwifiex_adapter*)* @mwifiex_sdio_disable_host_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mwifiex_sdio_disable_host_int(%struct.mwifiex_adapter* %0) #0 {
  %2 = alloca %struct.mwifiex_adapter*, align 8
  %3 = alloca %struct.sdio_mmc_card*, align 8
  %4 = alloca %struct.sdio_func*, align 8
  store %struct.mwifiex_adapter* %0, %struct.mwifiex_adapter** %2, align 8
  %5 = load %struct.mwifiex_adapter*, %struct.mwifiex_adapter** %2, align 8
  %6 = getelementptr inbounds %struct.mwifiex_adapter, %struct.mwifiex_adapter* %5, i32 0, i32 0
  %7 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %6, align 8
  store %struct.sdio_mmc_card* %7, %struct.sdio_mmc_card** %3, align 8
  %8 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %9 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %8, i32 0, i32 1
  %10 = load %struct.sdio_func*, %struct.sdio_func** %9, align 8
  store %struct.sdio_func* %10, %struct.sdio_func** %4, align 8
  %11 = load %struct.sdio_func*, %struct.sdio_func** %4, align 8
  %12 = call i32 @sdio_claim_host(%struct.sdio_func* %11)
  %13 = load %struct.sdio_func*, %struct.sdio_func** %4, align 8
  %14 = load %struct.sdio_mmc_card*, %struct.sdio_mmc_card** %3, align 8
  %15 = getelementptr inbounds %struct.sdio_mmc_card, %struct.sdio_mmc_card* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @mwifiex_write_reg_locked(%struct.sdio_func* %13, i32 %18, i32 0)
  %20 = load %struct.sdio_func*, %struct.sdio_func** %4, align 8
  %21 = call i32 @sdio_release_irq(%struct.sdio_func* %20)
  %22 = load %struct.sdio_func*, %struct.sdio_func** %4, align 8
  %23 = call i32 @sdio_release_host(%struct.sdio_func* %22)
  ret void
}

declare dso_local i32 @sdio_claim_host(%struct.sdio_func*) #1

declare dso_local i32 @mwifiex_write_reg_locked(%struct.sdio_func*, i32, i32) #1

declare dso_local i32 @sdio_release_irq(%struct.sdio_func*) #1

declare dso_local i32 @sdio_release_host(%struct.sdio_func*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
